--- a/help.html
+++ b/help.html
@@ -61,7 +61,7 @@
             </p>
             <form
               class="content"
-              action="https://submit-form.com/2ym2t6SzG"
+              action="https://submit-form.com/Bl7kq5GTH"
               method="POST"
             >
  <input
